--- a/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/diff-view.html
+++ b/ide/ui/ide-monaco/src/main/resources/META-INF/dirigible/ide-monaco/diff-view.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="Content-Language" content="en-us" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
         <title>Diff Monaco Editor</title>
         <link type="text/css" data-name="monaco-editor/min/vs/editor/editor.main" rel="stylesheet"
             href="monaco-editor/min/vs/editor/editor.main.css" />
