--- a/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/explorer/explorer.html
+++ b/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/explorer/explorer.html
@@ -44,7 +44,7 @@
 
 	</head>
 
-	<body ng-app="database" ng-controller="DatabaseController">
+	<body ng-app="database" ng-controller="DatabaseController" class="sidepanel">
 
 		<div class="view-fixed-top">
 			<div class="btn-toolbar-top">
@@ -63,9 +63,7 @@
 				</div>
 			</div>
 		</div>
-		<div>
-			<div class="database"></div>
-		</div>
+		<div class="database scrollpanel"></div>
 
 	</body>
 
