--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/git.html
@@ -48,7 +48,7 @@
         <script type="text/javascript" src="git.js"></script>
     </head>
 
-    <body ng-app="workspace" ng-controller="WorkspaceController as workspace" class="workspace-body">
+    <body ng-app="workspace" ng-controller="WorkspaceController as workspace" class="sidepanel">
 
         <div class="view-fixed-top">
             <div class="btn-toolbar-top">
@@ -90,7 +90,7 @@
             </div>
         </div>
 
-        <div class="workspace"></div>
+        <div class="workspace scrollpanel"></div>
 
         <!-- Clone -->
         <div class="dirigible-modal modal fade" id="dialogClone" tabindex="-1" role="dialog"
