--- a/ide/ui/ide-registry/src/main/resources/META-INF/dirigible/ide-registry/registry.html
+++ b/ide/ui/ide-registry/src/main/resources/META-INF/dirigible/ide-registry/registry.html
@@ -45,7 +45,7 @@
 
     </head>
 
-    <body ng-app="registry" ng-controller="RegistryController as registry">
+    <body ng-app="registry" ng-controller="RegistryController as registry" class="sidepanel">
 
         <div class="view-fixed-top">
             <div class="btn-toolbar-top">
@@ -55,10 +55,7 @@
                 </div>
             </div>
         </div>
-
-        <div>
-            <div class="registry"></div>
-        </div>
+        <div class="registry scrollpanel"></div>
 
     </body>
 
