--- a/ide/ui/ide-repository/src/main/resources/META-INF/dirigible/ide-repository/repository.html
+++ b/ide/ui/ide-repository/src/main/resources/META-INF/dirigible/ide-repository/repository.html
@@ -43,7 +43,7 @@
 
     </head>
 
-    <body ng-app="repository" ng-controller="RepositoryController as repository">
+    <body ng-app="repository" ng-controller="RepositoryController as repository" class="sidepanel">
 
         <div class="view-fixed-top">
             <div class="btn-toolbar-top">
@@ -55,10 +55,7 @@
                 </div>
             </div>
         </div>
-
-        <div>
-            <div class="repository"></div>
-        </div>
+        <div class="repository scrollpanel"></div>
 
     </body>
 
