--- a/ide/ui/ide-workspace/src/main/resources/META-INF/dirigible/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/META-INF/dirigible/ide-workspace/workspace.html
@@ -46,7 +46,7 @@
         <script type="text/javascript" src="/services/v4/web/ide-core/ui/ui-core-ng-modules.js"></script>
     </head>
 
-    <body ng-app="workspace" ng-controller="WorkspaceController as workspace" class="workspace-body">
+    <body ng-app="workspace" ng-controller="WorkspaceController as workspace" class="sidepanel">
 
         <div class="view-fixed-top">
             <div class="btn-toolbar-top">
@@ -116,7 +116,7 @@
             </div>
         </div>
 
-        <div class="workspace"></div>
+        <div class="workspace scrollpanel"></div>
 
         <!-- Create Workspace -->
         <div class="dirigible-modal modal fade" id="dialogCreateWorkspace" tabindex="-1" role="dialog"
